Implemented User router
