# entities/user/User.ts
@@ -1,0 +1,6 @@
+export type User = {
+    id: string;
+    email: string;
+    password: string;
+    displayName: string;
+}
